# otus-cpp-professional

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
src/: ip_filter.cpp  ip_filter.h  util.cpp  util.h
tests/: CMakeLists.txt  tests.cpp
version/: CMakeLists.txt
